--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "__sriracha_pwks_club";
+    font-family: "__font_pwks_kanit";
     src: url("../fonts/Sriracha-Regular.ttf");
     font-weight: 400;
     font-style: normal;
@@ -11,6 +11,7 @@
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    /* font-family: "__font_pwks_kanit"; */
   }
   
   .bg-admin {
