--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,9 +418,7 @@ h6 {
 }
 
 /* BUTTON */
-.btn {
-  padding: 3px 30px !important;
-}
+
 
 .btn-main {
   color: var(--color-white);
@@ -1012,4 +1010,8 @@ h6 {
     background-color: white;
     border-radius: 10px;
   }
+}
+
+.centerButton{
+  padding: 0.5rem 0.5rem 1rem 1rem !important; 
 }
